test/programs/error-pattern-2-ellipses.defs
(def (this ($pattern .. has serious $problems .. (I think)))
  constructor)